image distorted fix

--- a/assets/scss/_apartment.scss
+++ b/assets/scss/_apartment.scss
@@ -98,7 +98,7 @@
 	img {
 		width:100%;
 		max-width: 640px;
-		max-height: 980px;
+		//max-height: 980px;
 	}
 }
 
