--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -13,7 +13,7 @@
 		
 		text-align: center;
 		overflow: hidden;
-	  height:300px;
+	  //height:300px;
 
 		@include bp($s2){
 			background-image: url(../img/home_head_bg2_large.jpg);
@@ -36,58 +36,34 @@
 			left:25%;
 			background-image: url(../img/home_head_bg2_brutal.jpg);
 		}
-	
 
-		h1 {
-			
-			margin: 4em auto 1em;
-			padding:0 1em;
-			max-width: 22em;
-			color:#fff;
-			text-transform: uppercase;
-			font-size: 20px;
-			line-height: 1.25;
-			letter-spacing: 0.25em;
-			text-shadow:0 0 2px $gray-main;
-			@include bp($s2) {
-				margin:6em auto 1em;
-				font-size: 28px;
-			}
-		}
-
-		h2 {
-			font-family: $sans-serif;
-			color:#fff;
-			max-width: 38em;
-			font-size: 16px;
-			margin:1em auto;
-			padding:0 1em;
-			text-align:left;
-			text-shadow:0 0 2px $gray-main;
-			@include bp($s2) {
-				margin:1em auto 13em;
-				font-size: 20px;
-			}
-		}
 	}
 	
 	.home--headhero--text {
-	  position: absolute;
-	  top: 50%;
-	  left:50%;
-	  transform: translateY(-50%) translateX(-50%);
+	  
 	  text-align: center;
 	  color:#fff;
 	  text-shadow:0 0 2px $gray-main;
 		padding:1em;
-	  @include bp($s2) {
-			font-size: 1.5em;
-		}
+		margin: 3em 0 2em;
 
+	  @include bp($s2) {
+	  	margin: 0;
+	  	position: absolute;
+	  	top: 50%;
+	  	left:50%;
+	  	transform: translateY(-50%) translateX(-50%);
+			font-size: 1.5em;
+			width: 90%;
+		}
+		@include bp($s4) {
+			width:40em;
+		}
 
 	  h1 {			
 			margin: 1em auto 1em;
-			max-width: 22em;
+			color:#fff;
+			//max-width: 22em;
 			text-transform: uppercase;
 			font-size: 20px;
 			line-height: 1.25;
@@ -99,11 +75,23 @@
 
 		h2 {
 			font-family: $sans-serif;
-			max-width: 38em;
+			color:#fff;
+			//max-width: 38em;
 			font-size: 16px;
 			margin:1em auto;
 			@include bp($s2) {
 				font-size: 20px;
+			}
+		}
+
+		.btn.btn-light {
+			text-shadow: none;
+			background-color: rgba(#000,.25);
+			margin-bottom: .333em;
+			//color:$red-main;
+			&:hover,&:focus {
+				background-color: rgba($red-main,1);
+				box-shadow:none; 
 			}
 		}
 	}
